# unitntgbot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  compose.yaml  pyproject.toml  renovate.json  routes.json  stops.json  tmp.json  tmp2.json  trips.json
.github/workflows/: build_and_push.yaml
backend/: .gitignore  Cargo.toml
backend/canteen/: README.md  pyproject.toml
backend/canteen/src/canteen/: __init__.py  api.py  database.py  scraper.py  settings.py
backend/exams/: README.md  pyproject.toml
backend/exams/src/exams/: UniversityExam.py  __init__.py  api.py  database.py  scraper.py  settings.py
backend/lectures/: README.md  pyproject.toml
backend/lectures/src/lectures/: LectureUpdate.py  UniversityLecture.py  __init__.py  api.py  database.py  rooms_mapping.py  scraper.py  settings.py  test.py
backend/maps/: README.md  pyproject.toml
backend/maps/src/maps/: api.py  parser.py  renderer.py
backend/rooms/: README.md  pyproject.toml
backend/rooms/src/rooms/: Room.py  api.py  process_rooms.py  rooms_mapping.py  scraper.py
backend/src/: main.rs
backend/tt/: README.md  pyproject.toml
backend/tt/src/tt/: api.py  gtfs_fallback.py  stops_mapping.py
backend/tt/src/tt/gtfs/: license.txt  stop_times.txt  trips.txt
backend/updater/: README.md  pyproject.toml
backend/updater/src/updater/: main.py  settings.py
db/: database.sqlite3
frontend/: canteen-scraper.py  main.py  pyproject.toml  scraper.py
frontend/bot/: pyproject.toml
frontend/bot/src/bot/: main.py
frontend/bot/src/bot/handlers/: canteen.py  exams.py  help.py  lectures.py  map.py  rooms.py  setup.py  tt.py
frontend/bot_frontend/: README.md  pyproject.toml
frontend/bot_frontend/src/bot_frontend/: main.py  utils.py
frontend/bot_frontend/src/bot_frontend/handlers/: canteen.py  exams.py  help.py  lectures.py  map.py  rooms.py  setup.py  start.py  tt.py
frontend/notification_dispatcher/: README.md  pyproject.toml
frontend/notification_dispatcher/src/notification_dispatcher/: __init__.py  main.py  notification.py  send_notification.py  settings.py
frontend/src/: main.py  scraper-esami.py
frontend/src/handlers/: menu.py  rooms.py  setup.py
src/unitntgbot/: __init__.py  main.py  scraper_esami.py
src/unitntgbot/backend/canteen/: __init__.py  api.py  database.py  scraper.py
src/unitntgbot/backend/exams/: UniversityExam.py  __init__.py  api.py  database.py  scraper.py  settings.py
src/unitntgbot/backend/lectures/: UniversityLecture.py  __init__.py  api.py  database.py  rooms_mapping.py  scraper.py  settings.py
src/unitntgbot/backend/maps/: api.py  maps_service.py  parser.py  renderer.py
src/unitntgbot/backend/rooms/: Room.py  api.py  rooms_mapping.py  scraper.py
src/unitntgbot/backend/trentino-trasporti/: __init__.py  api.py
src/unitntgbot/backend/tt/: __init__.py  api.py  stops_mapping.py
src/unitntgbot/bot/: main.py  settings.py
src/unitntgbot/bot/handlers/: canteen.py  exams.py  help.py  lectures.py  map.py  menu.py  rooms.py  setup.py  start.py  transports.py  tt.py
src/unitntgbot/notification_dispatcher/: main.py  settings.py
src/unitntgbot/updater/: main.py  settings.py
