[project]
name = "canteen"
version = "0.1.0"
description = "Canteen microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
]

[project.scripts]
canteen = "canteen.api:main"
canteen-develop = "canteen.api:develop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
