[project]
name = "canteen"
version = "0.1.0"
description = "Canteen microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "notification_dispatcher",
    "lxml>=6.0.0",
]

[tool.uv.sources]
notification_dispatcher = { workspace = true }

[project.scripts]
canteen = "canteen.api:main"
canteen-develop = "canteen.api:develop"
canteen-scraper = "canteen.scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
