[project]
name = "exams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto Gusmeroli", email = "96133902+guss-alberto@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyquery>=2.0.1",
    "requests>=2.32.3",
]

[project.scripts]
exams = "exams:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
