[project]
name = "exams"
version = "0.1.0"
description = "Exams microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "pyquery>=2.0.1",
    "lectures",
]

[tool.uv.sources]
lectures = { workspace = true }

[project.scripts]
exams = "exams.api:main"
exams-develop = "exams.api:develop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
