[project]
name = "lectures"
version = "0.1.0"
description = "Lectures microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "python-telegram-bot>=21.10",
    "notification_dispatcher",
]

[tool.uv.sources]
notification_dispatcher = { workspace = true }

[project.scripts]
lectures = "lectures.api:main"
lectures-develop = "lectures.api:develop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
