[project]
name = "rooms"
version = "0.1.0"
description = "Rooms microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.2.3",
    "python-levenshtein>=0.27.1",
]

[project.scripts]
rooms = "rooms.api:main"
rooms-develop = "rooms.api:develop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
