[project]
name = "tt"
version = "0.1.0"
description = "Trentino Trasporti microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
tt = "tt.api:main"
tt-develop = "tt.api:develop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
