[project]
name = "notification_dispatcher"
version = "0.1.0"
description = "Notification dispatcher for the Telegram bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "python-telegram-bot>=21.10",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
container-run = "notification_dispatcher.main:main"
notification_dispatcher = "notification_dispatcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
